--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -24,9 +24,7 @@ p {
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 100vh;
-  background-size: cover;
-  z-index: -1;
+  height: 100lvh;
 }
 .plasma-cutter {
   max-width: none;
